chart-jack/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jack-ingress
  labels:
    app: jack
    desafio: jackexperts
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jack-service 
                port:
                  number: 80
